# visualize_fiction

./: .gitignore  API.config.yaml  Development_Requirements.md  Readme.md  config.yaml  pyproject.toml  requirements.txt  开发需求_中文版.md  斗罗大陆(1-500章).txt
config/: config.yaml
data/processed/: tmpfu5k4kef.yaml  tmplji4l9dn.yaml  tmpnfvwymg8.yaml  tmppmpuu5vi.yaml  tmpv9s5zl4w.yaml  斗罗大陆(1-500章).yaml
docs/0.01/: chapter_parser_document.md  character_extractor_document.md  character_extractor_plan.md  character_tuner_document.md  character_tuner_plan.md  development_document_v0.01.md  development_plan_v0.01.md
examples/: extract_characters.py  parse_novel.py  test_character_extractor.py  tune_characters.py
src/: __init__.py
src/audio_processing/: __init__.py
src/character_tuner/: __init__.py  character_tuner.py
src/portrait_generation/: __init__.py
src/text_processing/: __init__.py  chapter_parser.py  character_extractor.py  character_tuner.py  feature_standardizer.py  llm_client.py
src/utils/: __init__.py  config_loader.py  file_manager.py  logger.py
src/video_composition/: __init__.py
tests/: test_character_extractor.py  test_character_tuner.py  test_text_processing.py
